@@ -1917,6 +1917,19 @@ test(674, DT[x>1,z:=sum(y),keyby=x], error="When i is present, keyby := on a sub
 DT = data.table(x=1:2, y=1:6, key="x")
 test(675, DT[.(1L)], DT[1:3])
 
+# Test new rbindlist
+l = list(data.table(a=1:2, b=7:8),
+         data.table(a=3:4, 9:10),
+         data.table(5:6, 11:12),
+         data.table(b=13:14),
+         list(15:16,17L),
+         list(c(18,19),20:21))
+test(676, rbindlist(l[1:3]), data.table(a=1:6,b=7:12))
+test(677, rbindlist(l[c(10,1,10,2,10)]), data.table(a=1:4,b=7:10))  # NULL items ignored
+test(678, rbindlist(l[c(1,4)]), error="Item 2 has 1 columns, inconsistent with item 1 which has 2")
+test(679, rbindlist(l[c(1:2,5)]), error="Column 2 of item 3 is length 1, inconsistent with first column of that item which is length 2.")
+test(680, rbindlist(l[c(2,6)]), error="Column 1 of item 2 is type 'double', inconsistent with column 1 of item 1 (type 'integer')")
+test(681, rbindlist(list(data.table(a=letters[1:2],b=c(1.2,1.3),c=1:2), list("c",1.4,3L), NULL, list(letters[4:6],c(1.5,1.6,1.7),4:6))), data.table(a=letters[1:6], b=seq(1.2,1.7,by=0.1), c=1:6))
 
 # Next, follow through irows in assign step after eval in dogroups to check redundancy
 # TO DO: tests on double in add hoc by
